WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251608
[RTL/bidi/vertical] Incorrect content truncation when "text-overflow" is "ellipsis"
https://bugs.webkit.org/show_bug.cgi?id=251608
Summary
[RTL/bidi/vertical] Incorrect content truncation when "text-overflow" is "ell...
alan
Reported
2023-02-02 10:20:37 PST
ssia
Attachments
Patch
(51.78 KB, patch)
2023-02-02 11:38 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(51.81 KB, patch)
2023-02-02 17:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(51.81 KB, patch)
2023-02-03 07:16 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(51.84 KB, patch)
2023-02-03 09:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(51.88 KB, patch)
2023-02-03 16:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-02-02 11:38:15 PST
Created
attachment 464816
[details]
Patch
alan
Comment 2
2023-02-02 17:10:34 PST
Created
attachment 464818
[details]
Patch
alan
Comment 3
2023-02-03 07:16:52 PST
Created
attachment 464822
[details]
Patch
alan
Comment 4
2023-02-03 09:37:15 PST
Created
attachment 464825
[details]
Patch
alan
Comment 5
2023-02-03 16:42:18 PST
Created
attachment 464829
[details]
Patch
EWS
Comment 6
2023-02-03 18:50:59 PST
Committed
259850@main
(ff75ee6b051e): <
https://commits.webkit.org/259850@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464829
[details]
.
Radar WebKit Bug Importer
Comment 7
2023-02-03 18:51:22 PST
<
rdar://problem/105029885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug